--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+      "paths": {
+        "src/*": [
+            "src/*"
+        ],
+    },
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
