--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
+      "experimentalDecorators": true,
       "paths": {
         "src/*": [
             "src/*"
